updated dependencies versiom and copyright

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ TapResponderChainInputView.xcodeproj/xcuserdata
 TapResponderChainInputView.xcodeproj/project.xcworkspace/xcuserdata
 TapResponderChainInputView.xcworkspace/xcuserdata
 Pods
+/.DS_Store
